--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <!-- Audio -->
-        <audio src="song.mp3" id="player" controls autoplay></audio>
+        <audio src="song.mp3" id="player" autoplay controls></audio>
 
         <!-- P Text --> <!-- Do Not Delete -->
         <div id="text">
