--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <!-- Audio -->
-        <audio src="song.mp3" id="player" autoplay controls></audio>
+        <audio src="song.mp3" id="player" autoplay loop controls></audio>
 
         <!-- P Text --> <!-- Do Not Delete -->
         <div id="text">
@@ -69,7 +69,7 @@
             new kursor({
                 type: 1,
                 removeDefaultCursor: true,
-                color: "#EC3016"
+                color: "#B7F0E7"
             });
         </script>
     </body>
