--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </div>
 
         <!-- Audio -->
-        <audio src="song.mp3" id="player" autoplay loop controls></audio>
+        <audio loop autoplay>
+            <source src="song.mp3" type="audio/mp3" />
+        </audio>
 
         <!-- P Text --> <!-- Do Not Delete -->
         <div id="text">
