--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         </div>
 
         <!-- Audio -->
-        <audio loop autoplay>
-            <source src="song.mp3" type="audio/mp3" />
-        </audio>
+        <audio src="song.mp3" autoplay controls></audio>
 
         <!-- P Text --> <!-- Do Not Delete -->
         <div id="text">
