--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
         <div class="container">
             <h1>Ho<span>la</span></h1>
-            <p>Summer Walker - Sped Up</p>
+            <p>i've been here 60 years and i'm still not bored</p>
         </div>
 
         <!-- Audio -->
-        <audio src="song.mp3" autoplay controls></audio>
+        <audio src="nowind.mp3" autoplay controls></audio>
 
         <!-- P Text --> <!-- Do Not Delete -->
         <div id="text">
