--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="icon" type="image/x-icon" href="icon3.png">
     </head>
     <body>
+        <p> test </p>
          <!-- Discord API -->
 
         <div id="discord_menu">
