--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Audio -->
         <audio id="player" src="nowind.mp3" loop></audio>
         <section class="button-container">
-            <div><button onclick="document.getElementById('player').play()"><i>Background Music</i></button></div>
+            <div><button onclick="document.getElementById('player').play()"><i> uwu shit</i></button></div>
         </section>
 
         <!-- P Text --> <!-- Do Not Delete -->
