--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
         </div>
 
         <!-- Audio -->
-        <audio id="player" src="nowind.mp3" loop></audio>
+        <audio src="nowind.mp3" autoplay controls></audio>
+<!--         <audio id="player" src="nowind.mp3" loop></audio>
         <section class="button-container">
             <div><button onclick="document.getElementById('player').play()"><i> uwu shit</i></button></div>
-        </section>
+        </section> -->
 
         <!-- P Text --> <!-- Do Not Delete -->
         <div id="text">
